# blockSQP2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_TEMPLATE.txt  CMakeLists_old.txt  LICENSE  README.md  README_.md  README_windows.md  SparseSolver.cpp  localchanges.patch
C/: CblockSQP2.cpp
CMake/: CMakeListsBinaryBuilderjl.cmake  CMakeListsBinaryBuilderjl.txt
C_Interface/: C_blockSQP.cpp
C_blockSQP/: C_blockSQP.cpp
Interface_src/: C_blockSQP.cpp  py_blockSQP.cpp
MUMPS_SUBDIRS/1/: CMakeLists.txt
MUMPS_SUBDIRS/4/: CMakeLists.txt
Manual/: manual.aux  manual.bbl  manual.blg  manual.tex  manual.toc  references.bib
Python/: pyblockSQP.cpp  pyblockSQP2.cpp
Python/blockSQP2/: LICENSE  Problemspec.py  README.md  __init__.py
Python/examples/: example1.py  example1_sparse.py
benchmark/: OCP_experiment.py  OCProblems.py  run_blockSQP.py  run_blockSQP2.py  run_casadi_solver.py
benchmark/Paper_2025/Sect_3/: P2Chem_Jacobian_condensing.py  prob_vectors.npz  prob_vectors_old.npz  structure_data.npz
benchmark/Paper_2025/Sect_4/: Catalyst_Mixing_SR1_BFGS.py  Electric_Car_SR1_BFGS.py  Goddard_Rocket_conv_strategy_comparison.py  Lotka_OED_SR1_BFGS.py  conv_strategy_comparison.py  sequential_parallel_comparison.py
benchmark/Paper_2025/Sect_5/: Cushioned_Oscillation_scaled.py  Electric_Car_premature_termination.py  Lotka_Volterra_scaling.py  Three_Tank_inaccurate.py  scaling_comparison.py
benchmark/Paper_2025/Sect_6/: blockSQP2_ipopt_comparison.py  blockSQP_ipopt_comparison.py
benchmark/Paper_2025_experiments/Sect_3/: P2Chem_Jacobian_condensing.py
benchmark/Paper_2025_experiments/Sect_4/: Catalyst_Mixing_SR1_BFGS.py  (+8 more)
benchmark/experiments/: Lotka_OED_scaled.py  run_blockSQP2_experiments.py  run_blockSQP_experiments.py  run_ipopt_experiments.py  solver_comparison.py
blockSQP/: CMakeLists.txt  LICENSE  README.md
blockSQP/dep/: SparseSolver.cpp
blockSQP/dep/modified_qpOASES/include/qpOASES/: MessageHandling.hpp  QProblemB.hpp  SparseSolver.hpp
blockSQP/dep/modified_qpOASES/src/: QProblem.cpp  QProblemB.cpp
blockSQP/dep/qpOASES_mod/: AUTHORS  AUTHORS.txt
blockSQP/dep/qpOASES_mod/src/: QProblem.cpp  QProblemB.cpp  SQProblemSchur.cpp  SparseSolver.cpp
blockSQP/examples/: callgrind.out.18073  example1.cpp  example1_sparse  example1_sparse.cpp  example_CQPsolver  example_CQPsolver.cpp  example_condensing  example_condensing.cpp  example_plugin_loader  example_plugin_loader.cpp
blockSQP/include/: QPloop.hpp  blocksqp_condensing.hpp  blocksqp_defs.hpp  blocksqp_general_purpose.hpp  blocksqp_iterate.hpp  blocksqp_load_mumps.hpp  blocksqp_matrix.hpp  blocksqp_method.hpp  blocksqp_options.hpp  blocksqp_plugin_loader.hpp  blocksqp_problemspec.hpp  blocksqp_qpsolver.hpp  blocksqp_restoration.hpp  blocksqp_stats.hpp
blockSQP/src/: blocksqp_condensing.cpp  blocksqp_defs.cpp  blocksqp_general_purpose.cpp  blocksqp_glob.cpp  blocksqp_hess.cpp  blocksqp_iter.cpp  blocksqp_load_mumps.cpp  blocksqp_main.cpp  blocksqp_mainloop.cpp  blocksqp_matrix.cpp  blocksqp_method.cpp  blocksqp_options.cpp  blocksqp_plugin_loader.cpp  blocksqp_problemspec.cpp  blocksqp_qp.cpp  blocksqp_qpsolver.cpp  blocksqp_restoration.cpp  blocksqp_scaling.cpp  blocksqp_sqputils.cpp  blocksqp_stats.cpp
blockSQP/src/ext/: blocksqp_load_mumps.cpp  dmumps_c_dyn.cpp
blockSQP2/: LICENSE
blockSQP2/examples/: example1.cpp  example1_sparse.cpp  example_condensing.cpp
blockSQP2/include/: blockSQP2.hpp  blocksqp_condensing.hpp
blockSQP2/src/: condensing.cpp  defs.cpp  general_purpose.cpp  glob.cpp  hess.cpp  iter.cpp  load_mumps.cpp  mainloop.cpp  matrix.cpp  method.cpp  options.cpp  problemspec.cpp  qp.cpp  qpsolver.cpp  restoration.cpp  scaling.cpp  sqputils.cpp  stats.cpp
blockSQP_julbind/: BlockSQP.cpp  CMakeLists.txt  CMakeLists_TEMPLATE.txt  Condensing.jl  Jul_BlockSQP.jl  example1.jl  example1_sparse.jl  example_DynamicOED.jl
blockSQP_pybind/: BlockSQP.cpp  CMakeLists.txt  CMakeLists_TEMPLATE.txt  OCP_BlockSQP.py  OCProblems.py  Py_BlockSQP.py  example1.py  example1_sparse.py
examples/: BLOCKSQP_TEST_block  BLOCKSQP_TEST_condensing  BLOCKSQP_TEST_condensing_QPS  BLOCKSQP_TEST_condensing_SOC  BLOCKSQP_TEST_condensing_multiple  BLOCKSQP_TEST_condensing_second_hessian  BLOCKSQP_example1  CMakeLists.txt  TEST_block.cpp  TEST_condensing.cpp  TEST_condensing_SOC.cpp  TEST_condensing_multiple.cpp  TEST_condensing_second_hessian.cpp  example1.cpp
include/: blocksqp_condensing.hpp  blocksqp_defs.hpp  blocksqp_general_purpose.hpp  blocksqp_iterate.hpp  blocksqp_matrix.hpp  blocksqp_method.hpp  blocksqp_options.hpp  blocksqp_problemspec.hpp  blocksqp_qpsolver.hpp  blocksqp_restoration.hpp  blocksqp_stats.hpp
julia_Interface/: Condensing.jl  blockSQP.jl  blockSQP_jl.cpp  blockSQP_jl_NOCXXWRAP.cpp  blockSQP_julbind.cpp  example1.jl  example1_sparse.jl
modded_external/modded_files/: MessageHandling.hpp  QProblemB.cpp  QProblemB.hpp  SparseSolver.cpp
py_blockSQP/: __init__.py  blockSQP_Problemspec.py  py_blockSQP.cpp
py_examples/: example1.py  example1_sparse.py
python_Interface/: CMakeLists.txt  OCP_BlockSQP.py  OCProblems.py  blockSQP_pyProblem.py  blockSQP_pybind.cpp  example1.py  example1_sparse.py  py_blockSQP.cpp
python_Interface/OCP_experiments/: Heat_Exchanger.py  Lotka_Jacobian_correct.npz  OCP_Lotka_Derivatives.py  OCP_blockSQP.py  OCP_casadi_solver.py  OCP_experiment.py  OCP_feas.py  OCP_multi_experiment.py  OCP_multi_experiment_ipopt.py  OCP_run_experiments_blockSQP.py  OCP_run_experiments_ipopt.py  OCProblems.py
python_Interface/examples/: OCP_blockSQP.py  OCP_casadi_solver.py  OCProblems.py  example1.py  example1_sparse.py
python_Interface/py_blockSQP/: __init__.py  blockSQP_Problemspec.py  blockSQP_pyProblem.py
src/: blocksqp_condensing.cpp  blocksqp_defs.cpp  blocksqp_general_purpose.cpp  blocksqp_glob.cpp  blocksqp_hess.cpp  blocksqp_iter.cpp  blocksqp_iter_.cpp  blocksqp_main.cpp  blocksqp_matrix.cpp  blocksqp_options.cpp  blocksqp_problemspec.cpp  blocksqp_qp.cpp  blocksqp_qp_OLD.cpp  blocksqp_qpsolver.cpp  blocksqp_restoration.cpp  blocksqp_stats.cpp
(+69 files in other folders)
